fix: white space in scroll, set independent v-scroll at content, add "main-content" div, create base.css

--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -9,6 +9,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    overflow: hidden; /* Evita el scroll global */
 }
 
 /*
@@ -34,6 +35,7 @@ li {
     align-items: stretch;
     display: flex;
     width: 100%;
+    overflow: hidden;
 }
 
 #sidebar {
